Fix some padding and positioning / layout issues

--- a/src/modules/Container.style.scss
+++ b/src/modules/Container.style.scss
@@ -5,3 +5,7 @@
   cursor: pointer;
   font-weight: 700;
 }
+
+.topLevelDialog section {
+    padding: 65px 45px 0 45px;  
+}
